[package]
name = "csc"
version = "0.1.0"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Command Line Scientific Calculator"
license = "MIT"
repository = "https://github.com/zahash/csc"

[dependencies]
regex = { version = "1" }
lazy_static = { version = "1" }
rustyline = { version = "12" }

[dev-dependencies]
pretty_assertions = { version = "1" }
