[package]
name = "csc"
version = "0.1.3"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Command Line Scientific Calculator"
license = "MIT"
repository = "https://github.com/zahash/csc"

[dependencies]
regex = { version = "1" }
lazy_static = { version = "1" }
clap = { version = "4", features = ["derive"] }
rustyline = { version = "12" }

[dev-dependencies]
pretty_assertions = { version = "1" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
